--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -12,6 +12,33 @@
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
 
+    <table th:each="job : ${jobs}" class="job-listing">
+        <tr>
+            <th>ID</th>
+            <th th:text="${job.getId()}"></th>
+        </tr>
+        <tr>
+            <th>Name</th>
+            <th th:text="${job.getName}"></th>
+        </tr>
+        <tr>
+            <th>Employer</th>
+            <th th:text="${job.getEmployer()}"></th>
+        </tr>
+        <tr>
+            <th>Location</th>
+            <th th:text="${job.getLocation()}"></th>
+        </tr>
+        <tr>
+            <th>Position Type</th>
+            <th th:text="${job.getPositionType()}"></th>
+        </tr>
+        <tr>
+            <th>Skill</th>
+            <th th:text="${job.getCoreCompetency()}"></th>
+        </tr>
+    </table>
+
 </div>
 
 </body>
