--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -19,8 +19,18 @@
             </tr>
             <tr>
                 <!-- TODO #2: Complete the View Jobs By Category Table. -->
-
-                <td></td> <!-- Feel free to remove or modify this element if necessary. -->
+<!--                <td>-->
+<!--                    <li>-->
+<!--                    <a th:href="@{/list/jobs(column=all)}"> View All</a>-->
+<!--                    </li>-->
+<!--                </td>-->
+<!--                <td th:each="category : ${columnChoices}">-->
+<!--                    <ul>-->
+<!--                        <li th:each="item : category.value">-->
+<!--                            <a th:href="@{/list/jobs(column=${all}, value=${item})}" th:text="${item}"></a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </td>-->
 
                 <td th:each="category : ${tableChoices}">
                     <ul>
