--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -15,27 +15,27 @@
     <table th:each="job : ${jobs}" class="job-listing">
         <tr>
             <th>ID</th>
-            <th th:text="${job.getId()}"></th>
+            <td th:text="${job.getId()}"></td>
         </tr>
         <tr>
             <th>Name</th>
-            <th th:text="${job.getName}"></th>
+            <td th:text="${job.getName}"></td>
         </tr>
         <tr>
             <th>Employer</th>
-            <th th:text="${job.getEmployer()}"></th>
+            <td th:text="${job.getEmployer()}"></td>
         </tr>
         <tr>
             <th>Location</th>
-            <th th:text="${job.getLocation()}"></th>
+            <td th:text="${job.getLocation()}"></td>
         </tr>
         <tr>
             <th>Position Type</th>
-            <th th:text="${job.getPositionType()}"></th>
+            <td th:text="${job.getPositionType()}"></td>
         </tr>
         <tr>
             <th>Skill</th>
-            <th th:text="${job.getCoreCompetency()}"></th>
+            <td th:text="${job.getCoreCompetency()}"></td>
         </tr>
     </table>
 
